kubernetes/infrastructure/ingress/rules/flux-ingress.yaml
# special ingress rule for weave gitops application
# can't deploy with flux (as no ingress at this time) and dont know where else to store this rule
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-issuer
  name: flux-ingress
  namespace: flux-system
spec:
  ingressClassName: nginx-internal
  rules:
    - host: flux.${DOMAIN_NAME}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ww-gitops-weave-gitops
                port:
                  name: http
